<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ing_content_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/shopping_list"
            android:textStyle="bold"
            android:fontFamily="@font/avenir_book"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="160dp"
                android:fontFamily="@font/avenir_book"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sort_by"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/shopping_list_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown" />
        </LinearLayout>

        <ListView
            android:id="@+id/shopping_list_ingredients"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_dropdown_light_frame" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="Total Items:"
                android:fontFamily="@font/avenir_black_oblique"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/shopping_list_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/avenir_book"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
                app:layout_constraintStart_toEndOf="@+id/textView20" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/shopping_list_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/avenir_black_oblique"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/white"
            android:text="I have picked up these items"
            app:layout_constraintTop_toBottomOf="@+id/shopping_list_num_selected" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <include
            android:id="@+id/bottomNavigationView_layout"
            layout="@layout/bottom_navigation_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></include>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>